VIS/Areas/VIS/Content/Widgets/VIS-Widget.css
/* ... */
    .vis-a-modelHeightSetCls .scrollerVertical .vis-a-pTagSetHeight, .vis-a-modelHeightSetCls .vis-w-scrollerVerticalNewCls .vis-a-pTagSetHeight {
        margin-top: 0px !important;
        text-align: center;
        padding: 19% 0;
    }

.vis-a-actionsWidgetCls .vis-w-feedicon {
    /*display: block;*/
    display: flex !important;
    cursor:pointer;
}

@media screen and (max-width: 2000px) {
    .vis-a-task-status-panel {
        font-size: 13px;
    }

    .vis-editModeWidget .vis-a-task-status-panel {
        font-size: 13px;
    }
}

@media screen and (max-width: 1920px) {
    .vis-a-task-status-panel {
        font-size: 13px;
    }

    .vis-editModeWidget .vis-a-task-status-panel {
        font-size: 8px;
    }
}

@media screen and (max-width: 1367px) {
    .vis-a-task-status-panel {
        font-size: 13px;
    }

    .vis-editModeWidget .vis-a-task-status-panel {
        font-size: 8px;
    }
}

@media screen and (max-width: 1200px) {
    .vis-a-task-status-panel {
        font-size: 11px;
    }

    .vis-editModeWidget .vis-a-task-status-panel {
        font-size: 7px;
    }
}

@media screen and (max-width: 1024px) {
    .vis-a-task-status-panel {
        font-size: 9px;
    }

    .vis-editModeWidget .vis-a-task-status-panel {
        font-size: 6px;
    }
}

@media screen and (max-width:900px) {
    .vis-a-task-status-panel {
        font-size: 12px;
    }

    .vis-editModeWidget .vis-a-task-status-panel {
        font-size: 8px;
    }
}

@media screen and (max-width: 768px) {
    .vis-a-task-status-panel {
        font-size: 10px;
    }

    .vis-editModeWidget .vis-a-task-status-panel {
        font-size: 7px;
    }
}

@media screen and (max-width: 600px) {
    .vis-a-task-status-panel {
        font-size: 7px;
    }

    .vis-editModeWidget .vis-a-task-status-panel {
        font-size: 5px;
    }
}

@media screen and (max-width: 480px) {
    .vis-a-task-status-panel {
        font-size: 10px;
    }

    .vis-editModeWidget .vis-a-task-status-panel {
        font-size: 9px;
    }
}

@media screen and (max-width: 375px) {
    .vis-a-task-status-panel {
        font-size: 10px;
    }

    .vis-editModeWidget .vis-a-task-status-panel {
        font-size: 6px;
    }
}

@media screen and (max-width: 320px) {
    .vis-a-task-status-panel {
        font-size: 9px;
    }

    .vis-editModeWidget .vis-a-task-status-panel {
        font-size: 5px;
    }
}

.vis-a-closeBtnCls.close:hover {
    color: rgba(var(--v-c-primary), 1);
}

.vis-a-closeBtnCls.close {
    position: absolute;
    right: -12px;
    top: -12px;
    padding: 6px;
    border-radius: 50px;
    background-color: #f3f3f3;
    color: rgba(var(--v-c-on-secondary), 1);
    display: flex;
    align-items: center;
    justify-content: center;
    width: 30px;
    height: 30px;
    z-index: 2;
    opacity: 1 !important;
    border: 1px solid rgba(var(--v-c-on-secondary), 1)
}

    .vis-a-closeBtnCls.close span {
        position: relative;
      /*  top: -2px;*/
    }



.vis-a-purple-box {
    border-color: #7f46f061;
    background-color: #7f46f029;
}

    .vis-a-purple-box .vis, .vis-a-purple-box .fa {
        color: #7F46F0;
    }

.vis-followups-red-dot {
    position: absolute;
    top: -4px;
    right: -4px;
    width: 10px; /* Size of the dot */
    height: 10px; /* Size of the dot */
    background-color: red; /* Red color */
    border-radius: 50%; /* Makes it circular */
}

.vis-followups-label {
    position: relative;
}

.vis-a-purplebg {
    background-color: #7F46F0;
}



.vis-ts-panel-twoByTwo .vis-a-statusBox-container {
    grid-template-columns: repeat(2,1fr);
    padding: 0;
}

    .vis-ts-panel-twoByTwo .vis-a-statusBox-container .vis-a-status-box {
        flex-direction: column;
        justify-content: center;
    }
    .vis-ts-panel-twoByTwo .vis-a-statusBox-container .vis-a-headWico {
        display: block;
    }
    .vis-ts-panel-twoByTwo .vis-a-statusBox-container .vis-a-status-count {
        width: 40px;
        min-width: unset;
        font-size: 1.2em;
    }
    .vis-ts-panel-twoByTwo .vis-a-statusBox-container .vis-followups-red-dot {
        height: 8px;
        right: 30px;
        top: 30px;
        width: 8px;
    }
    .vis-ts-panel-twoByTwo .vis-a-statusBox-container .vis-a-status-name {
        font-size: 1.5em;
        margin: 2px 0;
    }
    .vis-ts-panel-twoByTwo .vis-a-statusBox-container .vis-a-headWico i {
        font-size: 2.5em;
    }
.vis-ts-panel-twoByTwo.vis-ts-panel-oneByOne .vis-a-statusBox-container .vis-a-headWico i {
    font-size: 1.5em;
}
.vis-ts-panel-twoByTwo.vis-ts-panel-oneByOne .vis-a-statusBox-container .vis-a-status-count {
    font-size: 1em;
}
.vis-ts-panel-twoByTwo.vis-ts-panel-oneByOne .vis-a-statusBox-container .vis-a-status-name {
    font-size: 1em;
}
.vis-ts-panel-twoByTwo.vis-ts-panel-oneByOne .vis-a-status-box {
    padding: .5em .625em;
}
html[dir=rtl] .vis-feedIcons.vis-icon-viewMoreComments {
    margin: 4px 0px 0 4px;
    float: none;
}

